fix css skeleton flickering

--- a/public/styles/animations.css
+++ b/public/styles/animations.css
@@ -57,6 +57,10 @@
 {
   position:absolute;
   opacity: 0;
+  top:0px;
+  right:0px;
+  bottom:0px;
+  left:0px;
 }
 
 .loader-wrapper
